# accelerated_network_SoC

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_project.py
data/: data_prepare.ipynb
results/: organization_test.json
results/baseline/: class_analysis.csv  metrics.json
results/baseline/evaluation_20260105_140729/: metrics.json
results/baseline/evaluation_20260105_140809/: class_analysis.csv  metrics.json
scripts/: evaluate_baseline.py  train_baseline.py
training/: test_accuracy.ipynb  test_gpu.ipynb
