[project]
name = "accelerated-network-soc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
]
